[metadata]
name = cunitPy
version = 0.0.1
author = Lázaro Claubert, Kennedy Souza
author_email = lazimrclaubert@gmail.com, kennedo160@gmail.com
description = A universal converter package
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/LazimR/CunitPy

classifiers =
    Programming Language :: Python :: 3
    License :: GNU GENERAL PUBLIC LICENSE
    Operating System :: OS Independent

[options]
package_dir = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src